RVA-1794|fix: Update sonarcloud settings

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -10,12 +10,12 @@ sonar.sources=.
 
 # Path to sources
 sonar.sources=.
-sonar.exclusions=**/*_test.go,**/vendor/**,**/mocks/**,**/protos/**,**/graph/generated/**,**/graph/schemas/**
+sonar.exclusions=**/*_test.go,**/vendor/**,**/mocks/**,**/protos/**,**/graph/generated/**,**/graph/schemas/**,**/graph/connections/**,**/graph/resolver.go
 sonar.inclusions=
 
 # Path to tests
 sonar.tests=.
-sonar.test.exclusions=main.go,**/vendor/**,**/mocks/**,**/protos/**,**/graph/generated/**,**/graph/schemas/**,**/types/**,**/*integration_test.go
+sonar.test.exclusions=main.go,**/vendor/**,**/mocks/**,**/protos/**,**/graph/generated/**,**/graph/schemas/**,**/graph/connections/**,**/graph/resolver.go,**/types/**,**/*integration_test.go
 sonar.test.inclusions=**/*_test.go
 
 # Path to code coverage report
