--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -21,3 +21,4 @@ sonar.test.inclusions=**/*_test.go
 # Path to code coverage report
 sonar.go.coverage.reportPaths=coverage.out
 sonar.go.tests.reportPaths=report.json
+sonar.coverage.exclusions=**/types/**
