RVA-1817-2 Revert changes on local.yml

--- a/local.yml
+++ b/local.yml
@@ -1,7 +1,7 @@
 SERVICE_NAME: "ms.api"
 PORT: "2000"
-mongodb_uri: "mongodb://localhost:27017"
-pulsar_url: "pulsar://10.0.0.2:6650"
+mongodb_uri: "mongodb://127.0.0.1:27017"
+pulsar_url: "pulsar://127.0.0.1:6650"
 pulsar_cert: ""
 HTTP_PORT: 8000
 
@@ -10,11 +10,11 @@ onfido_service_url: ""
 kyc_service_url: ""
 onboarding_service_url: ""
 verify_service_url: ""
-auth_service_url: "127.0.0.1:2010"
+auth_service_url: ""
 account_service_url: ""
 payee_service_url: ""
 person_service_url: ""
-payment_service_url: "127.0.0.1:2012"
+payment_service_url: ""
 identity_service_url: ""
 pricing_service_url: ""
 JWT_SECRETS: ""
