RVA-2111|refactor: Refactor CDD and others related functions
- Update README file
- Refactor resolvers for CDD and others

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -21,4 +21,4 @@ sonar.test.inclusions=**/*_test.go
 # Path to code coverage report
 sonar.go.coverage.reportPaths=coverage.out
 sonar.go.tests.reportPaths=report.json
-sonar.coverage.exclusions=**/types/**
+sonar.coverage.exclusions=**/types/**,main.go,**/lib/**,**/config/**
