--- a/.github/workflows/cd_qa.yml
+++ b/.github/workflows/cd_qa.yml
@@ -1,7 +1,8 @@
 name: Build, deploy to GCR
 on:
-  pull_request:
-    types: [opened, reopened]
+  push:
+    tags:
+      - '.*-rc.*'
 
 env:
   PROJECT_ID: ${{ secrets.PROJECT_SHARED }}
@@ -63,28 +64,6 @@ jobs:
       - name: Run unit tests
         run: make test
 
-  sonarcloud:
-    name: SonarCloud
-    runs-on: ubuntu-latest
-    steps:
-      - name: Set up Go
-        uses: actions/setup-go@v2
-        with:
-          go-version: ^1.17 # The Go version to download (if necessary) and use.
-      - uses: actions/checkout@v2
-        with:
-          fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
-        # Set credentials to get zebra library
-      - name: Setup credentials to access private repo
-        run: git config --global url."https://${{ secrets.PAT }}:x-oauth-basic@github.com/".insteadOf "https://github.com/"
-      - name: Generate test cover report
-        run:  go test -race -covermode=atomic -coverprofile=coverage.out -json ./... > report.json
-      - name: SonarCloud Scan
-        uses: SonarSource/sonarcloud-github-action@master
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-
   build:
     name: Build
     # The type of runner that the job will run on
@@ -108,14 +87,14 @@ jobs:
         run: go build .
 
   package:
-    name: Package (docker)
+    name: Setup, Build, and Deploy
     runs-on: ubuntu-latest
     needs: [build] # Only run this workflow when "build" workflow succeeds
 
     steps:
       - name: Get the version
         id: get_version
-        run: echo ::set-output name=VERSION::${GITHUB_REF/refs\/heads\//}
+        run: echo ::set-output name=VERSION::${GITHUB_REF/refs\/tags\//}
 
       - name: Get short commit id
         id: vars
@@ -165,9 +144,9 @@ jobs:
           export CONTAINER=`echo $ORG/$IMAGE`
           docker push "$REGISTRY_HOSTNAME"/"$CONTAINER":"$TAG"
           docker push "$REGISTRY_HOSTNAME"/"$CONTAINER":latest
-
+  
   deploy:
-    name: Deploy to DEV
+    name: Deploy to QA
     runs-on: [self-hosted, linux, x64, dev]
     needs: [package]
 
@@ -176,5 +155,5 @@ jobs:
         run: |
           export SERVICE_NAME=`echo $GITHUB_REPOSITORY | cut -d'/' -f2`
           export VERSION_NAME=`echo $GITHUB_REF | cut -d'/' -f3`
-          deploy "${SERVICE_NAME}" "${VERSION_NAME}"
+          deploy-qa "${SERVICE_NAME}" "${VERSION_NAME}"
 
