--- a/.github/workflows/cicd_dev.yml
+++ b/.github/workflows/cicd_dev.yml
@@ -176,6 +176,6 @@ jobs:
       - name: Deploy service
         run: |
           export SERVICE_NAME=`echo $GITHUB_REPOSITORY | cut -d'/' -f2`
-          export VERSION_NAME=`echo $GITHUB_REF | cut -d'/' -f3`
+          export VERSION_NAME=develop
           deploy "${SERVICE_NAME}" "${VERSION_NAME}"
 
