--- a/.github/workflows/cd_qa.yml
+++ b/.github/workflows/cd_qa.yml
@@ -154,6 +154,6 @@ jobs:
       - name: Deploy service
         run: |
           export SERVICE_NAME=`echo $GITHUB_REPOSITORY | cut -d'/' -f2`
-          export VERSION_NAME=`echo $GITHUB_REF | cut -d'/' -f3`
+          export VERSION_NAME=`echo ${{ steps.get_version.outputs.VERSION }}`
           deploy-qa "${SERVICE_NAME}" "${VERSION_NAME}"
 
