--- a/.github/workflows/cd_uat.yml
+++ b/.github/workflows/cd_uat.yml
@@ -176,6 +176,7 @@ jobs:
       - name: Deploy service
         run: |
           export SERVICE_NAME=`echo $GITHUB_REPOSITORY | cut -d'/' -f2`
-          export VERSION_NAME=`echo $GITHUB_REF | cut -d'/' -f3`
+          export VERSION_NAME=`echo ${{ steps.get_version.outputs.VERSION }}`
           deploy "${SERVICE_NAME}" "${VERSION_NAME}"
+
 
