--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,13 +1,10 @@
-name: Build,Lint and run tests
+name: Lint, tests, Sonar and Build
 on:
   push:
     branches:
       - '**'
       - '!develop'
       - '!master'
-
-  pull_request:
-    branches: [master, develop]
 
 jobs:
   lint:
