--- a/.github/workflows/cicd_dev.yml
+++ b/.github/workflows/cicd_dev.yml
@@ -1,4 +1,4 @@
-name: Build, deploy to GCR
+name: Build, deploy to DEV
 on:
   pull_request:
     types: [opened, reopened]
@@ -12,6 +12,7 @@ env:
   ORG: roava.io/services
   IMAGE: ms.api
   REGISTRY_HOSTNAME: eu.gcr.io/${{ secrets.PROJECT_SHARED }}
+  VERSION: develop
 
 jobs:
   lint:
@@ -115,17 +116,13 @@ jobs:
     needs: [build] # Only run this workflow when "build" workflow succeeds
 
     steps:
-      - name: Get the version
-        id: get_version
-        run: echo ::set-output name=VERSION::develop
-
       - name: Get short commit id
         id: vars
         run: echo "::set-output name=SHORT_COMMIT_ID::$(git rev-parse --short HEAD)"
 
       - name: Print version
         run: |
-          echo [github.tag]: ${{ steps.get_version.outputs.VERSION }}
+          echo [github.tag]: $VERSION
           echo [github.sha]: ${{ github.sha }}
           echo [github.ref]: ${{ github.ref }}
           echo [github.actor]: trigered by $GITHUB_ACTOR
@@ -150,7 +147,7 @@ jobs:
       - name: Build the Docker image
         id: build
         run: |
-          export TAG=`echo ${{ steps.get_version.outputs.VERSION }}`
+          export TAG=`echo $VERSION`
           export CONTAINER=`echo $ORG/$IMAGE`
           docker build -t "$REGISTRY_HOSTNAME"/"$CONTAINER":"$TAG" \
           -t "$REGISTRY_HOSTNAME"/"$CONTAINER":"${GITHUB_SHA::8}" \
@@ -163,7 +160,7 @@ jobs:
       - name: Publish
         id: publish
         run: |
-          export TAG=`echo ${{ steps.get_version.outputs.VERSION }}`
+          export TAG=`echo $VERSION`
           export CONTAINER=`echo $ORG/$IMAGE`
           docker push "$REGISTRY_HOSTNAME"/"$CONTAINER":"$TAG"
           docker push "$REGISTRY_HOSTNAME"/"$CONTAINER":latest
@@ -177,6 +174,6 @@ jobs:
       - name: Deploy service
         run: |
           export SERVICE_NAME=`echo $GITHUB_REPOSITORY | cut -d'/' -f2`
-          export VERSION_NAME=`echo ${{ steps.get_version.outputs.VERSION }}`
+          export VERSION_NAME=`echo $VERSION`
           deploy "${SERVICE_NAME}" "${VERSION_NAME}"
 
