adding change for envoy configuration

--- a/.github/workflows/cd_qa.yml
+++ b/.github/workflows/cd_qa.yml
@@ -11,6 +11,7 @@ env:
   ORG: roava.io/services
   IMAGE: ms.api
   REGISTRY_HOSTNAME: eu.gcr.io/${{ secrets.PROJECT_SHARED }}
+  GCP_PROJECT_NAME: "dev-roava-io"
 
 jobs:
   lint:
