--- a/.github/workflows/cd_uat.yml
+++ b/.github/workflows/cd_uat.yml
@@ -189,7 +189,7 @@ jobs:
       - id: auth
         uses: 'google-github-actions/auth@v0.4.0'
         with:
-          credentials_json: '${{ secrets.SV_ACCOUNT_DEV }}'
+          credentials_json: '${{ secrets.SV_ACCOUNT_UAT }}'
 
       - id: get-credentials
         uses: 'google-github-actions/get-gke-credentials@v0.4.0'
