--- a/.github/workflows/cd_qa.yml
+++ b/.github/workflows/cd_qa.yml
@@ -158,7 +158,7 @@ jobs:
       - name: Replace image in config
         run: |
           sed -i -e "s/\${parameters.gcp_project_name}/${GCP_PROJECT_NAME}/g" templates/${{github.event.repository.name}}.yaml
-          sed -i -e "s/\${parameters.version}/${VERSION}/g" templates/${{github.event.repository.name}}.yaml
+          sed -i -e "s/\${parameters.version}/${GITHUB_REF_NAME}/g" templates/${{github.event.repository.name}}.yaml
       
       - name: check change
         run: cat templates/${{github.event.repository.name}}.yaml
