--- a/.github/workflows/cd_prd.yml
+++ b/.github/workflows/cd_prd.yml
@@ -1,8 +1,8 @@
-name: Build and Package to production 
+name: Build, package and deploy to production
 on:
   push:
     tags:
-      - "*"
+      - '[0-9]+.[0-9]+.[0-9]+'
 
 env:
   PROJECT_ID: ${{ secrets.PROJECT_SHARED }}
@@ -11,6 +11,7 @@ env:
   ORG: roava.io/services
   IMAGE: ms.api
   REGISTRY_HOSTNAME: eu.gcr.io/${{ secrets.PROJECT_SHARED }}
+  GCP_PROJECT_NAME: "prd-roava-io"
 
 jobs:
   lint:
@@ -64,6 +65,28 @@ jobs:
       - name: Run unit tests
         run: make test
 
+  sonarcloud:
+    name: SonarCloud
+    runs-on: ubuntu-latest
+    steps:
+      - name: Set up Go
+        uses: actions/setup-go@v2
+        with:
+          go-version: ^1.17 # The Go version to download (if necessary) and use.
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
+        # Set credentials to get zebra library
+      - name: Setup credentials to access private repo
+        run: git config --global url."https://${{ secrets.PAT }}:x-oauth-basic@github.com/".insteadOf "https://github.com/"
+      - name: Generate test cover report
+        run:  go test -race -covermode=atomic -coverprofile=coverage.out -json ./... > report.json
+      - name: SonarCloud Scan
+        uses: SonarSource/sonarcloud-github-action@master
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+
   build:
     name: Build
     # The type of runner that the job will run on
@@ -102,7 +125,6 @@ jobs:
           echo [github.sha]: ${{ github.sha }}
           echo [github.ref]: ${{ github.ref }}
           echo [github.actor]: trigered by $GITHUB_ACTOR
-
       - name: Checkout
         uses: actions/checkout@v2
 
@@ -118,7 +140,6 @@ jobs:
           # Set up docker to authenticate
           # via gcloud command-line tool.
           gcloud auth configure-docker
-
       # images name in format - [ORG]/[IMAGE] e.g. roava.io/myimage
       - name: Build the Docker image
         id: build
@@ -132,7 +153,6 @@ jobs:
             --build-arg ACCESS_TOKEN="${{ secrets.PAT }}" \
             --build-arg GITHUB_REF="$GITHUB_REF" .
           docker tag "$REGISTRY_HOSTNAME"/"$CONTAINER":"$TAG" "$REGISTRY_HOSTNAME"/"$CONTAINER":latest
-
       - name: Publish
         id: publish
         run: |
@@ -140,4 +160,47 @@ jobs:
           export CONTAINER=`echo $ORG/$IMAGE`
           docker push "$REGISTRY_HOSTNAME"/"$CONTAINER":"$TAG"
           docker push "$REGISTRY_HOSTNAME"/"$CONTAINER":latest
+  deploy:
+    name: Deploy to prd
+    runs-on: [self-hosted, linux, x64, prd]
+    needs: [package]
 
+    steps:
+
+      - name: Check out my other private repo
+        uses: actions/checkout@master
+        with:
+          repository: roava/deploy
+          token: ${{ secrets.PAT }}
+
+      - name: Replace image in config
+        run: |
+          sed -i -e "s/\${parameters.gcp_project_name}/${GCP_PROJECT_NAME}/g" templates/${{github.event.repository.name}}.yaml
+          sed -i -e "s/\${parameters.version}/${GITHUB_REF_NAME}/g" templates/${{github.event.repository.name}}.yaml
+      
+      - name: check change
+        run: cat templates/${{github.event.repository.name}}.yaml
+      
+      - id: auth
+        uses: 'google-github-actions/auth@v0.4.0'
+        with:
+          credentials_json: '${{ secrets.SV_ACCOUNT_PRD }}'
+
+      - id: get-credentials
+        uses: 'google-github-actions/get-gke-credentials@v0.4.0'
+        with:
+          cluster_name: 'services-cluster'
+          use_internal_ip: true
+          location: 'europe-west2-a'
+      
+      - name: deploy
+        run : kubectl apply -f templates/${{github.event.repository.name}}.yaml --record
+
+      - name: adding annotations
+        run : kubectl annotate --overwrite -f templates/${{github.event.repository.name}}.yaml kubernetes.io/change-cause="deploy to templates/${{github.event.repository.name}}.yaml from ${GITHUB_REF_NAME}"
+      
+      - name: restarting pod
+        run : |
+          SERVICE=`echo ${{github.event.repository.name}} | sed 's/\./-/g'`
+          kubectl rollout restart deployment $SERVICE
+          sh validation.sh $SERVICE
