RVA-2851 : Implement changes for transactions query

--- a/local.yml
+++ b/local.yml
@@ -10,6 +10,6 @@ verification_service_url: ""
 auth_service_url: ""
 account_service_url: ""
 customer_service_url: ""
-payment_service_url: ""
+payment_service_url: "localhost:3000"
 pricing_service_url: ""
 messaging_service_url: ""
