--- a/local.yml
+++ b/local.yml
@@ -7,9 +7,9 @@ HTTP_PORT: "8000"
 
 onboarding_service_url: ""
 verification_service_url: ""
-auth_service_url: ""
+auth_service_url: "localhost:4000"
 account_service_url: ""
 customer_service_url: ""
-payment_service_url: ""
+payment_service_url: "localhost:3002"
 pricing_service_url: ""
 messaging_service_url: ""
