RVA 2851 | bug-fix : Implement changes for transactions query

--- a/local.yml
+++ b/local.yml
@@ -7,9 +7,9 @@ HTTP_PORT: "8000"
 
 onboarding_service_url: ""
 verification_service_url: ""
-auth_service_url: "localhost:4000"
+auth_service_url: ""
 account_service_url: ""
 customer_service_url: ""
-payment_service_url: "localhost:3002"
+payment_service_url: ""
 pricing_service_url: ""
 messaging_service_url: ""
