--- a/local.yml
+++ b/local.yml
@@ -8,7 +8,7 @@ HTTP_PORT: "8000"
 onboarding_service_url: ""
 verification_service_url: ""
 auth_service_url: ""
-account_service_url: "localhost:2000"
+account_service_url: ""
 customer_service_url: ""
 payment_service_url: ""
 pricing_service_url: ""
