--- a/.github/workflows/cd_x.yml
+++ b/.github/workflows/cd_x.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v2
         with:
-          go-version: ^1.17 # The Go version to download (if necessary) and use.
+          go-version: '1.18.3' # The Go version to download (if necessary) and use.
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - name: Check out code
         uses: actions/checkout@v2
